# alphascanner

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  container-scan.yml
alphascanner/: api.py  cli.py  config.py  db.py  fetcher.py  scanner.py  scheduler.py
alphascanner/templates/: index.html  table.html
tests/: test_scanner.py
