[project]
name = "alphascanner"
version = "0.1.0"
description = "Altcoin opportunity screener powered by CoinGecko"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pandas>=2.2",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "bandit>=1.7", "pip-audit>=2.7"]

[project.scripts]
alphascanner = "alphascanner.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alphascanner*"]

[tool.setuptools.package-data]
alphascanner = ["templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []
